<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NMFinalImageUnlock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_set_image">拍張新照片</string>
    <string name="menu_settings">設定</string>
    
    <string name="unlock">解鎖</string>

    <!-- settings activity -->
    <string name="setting_unlockScreenOn">使用圖片螢幕鎖</string>
    <string name="setting_syncacct">連結帳戶</string>
    
    <string name="input_account">輸入帳號</string>
    <string name="input_password">輸入密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="save">儲存</string>
    <string name="cancel">取消</string>
    <string name="warning_pwddiff">兩次輸入的密碼不同</string>
    
    <string name="acctType_ntumail">NtuMail2.0</string>
    <string name="acctType_dropbox">Dropbox</string>
    <string name="acctType_google">Google</string>
    
    <string name="accountInfo">acctInfo</string>
    <string name="accountType">accountType</string>
    <string name="username">username</string>
    <string name="password">password</string>
    
    
    <string name="toast_notsetaccount">未連結此服務</string>
</resources>
