<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp"
    >
    
    <TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:stretchColumns="2"
	    >
	
        <TableRow android:layout_width="match_parent" >

	        <TextView
	            android:id="@+id/txt_account"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/input_account"
	            />
	        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
	            />
	        <EditText
	            android:id="@+id/edit_account"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="text"
	            />
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
	       <TextView 
	           android:id="@+id/txt_password"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/input_password"
	           />
	       <TextView 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text=":"
	           />
	       <EditText 
	           android:id="@+id/edit_password" 
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
                android:inputType="textPassword"
	           />
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
	        <TextView 
	            android:id="@+id/txt_confirmpassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/confirm_password"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=":"
	            />
	        <EditText 
	            android:id="@+id/edit_confirmpassword" 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            />
        </TableRow>
	</TableLayout>
    
    
    <TableLayout
        android:id="@+id/tablelayout_savecancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
       
	        
	        <Button 
	            android:id="@+id/btn_save_account"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/save"
	            />
	        <Button 
	            android:id="@+id/btn_cancel_linking"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel"
	            />
        </TableRow>
    
    </TableLayout>
    
    
    
</LinearLayout>
